# cowboy

./: .gitignore  README.md  README.txt  alembic.ini  basecov_textual.json  coverage.json  eval_models.sh  install_postgres.sh  main.py  modulecov_textual.json  pyproject.toml  test_bt_dataset.py  test_compare.py  test_eval.py  test_eval_dataset.py  test_expectedcov.py  test_extract_file.py  test_itermod.py  test_lint.py  test_litellm.py  test_llm.py  test_read_data.py  test_tm.py
alembic/: env.py
alembic/versions/: faccdf9696ed_.py
cowboy/db/: core.py
cowboy/http/: __init__.py
docs/: detailed.txt  evaluations.md
notebooks/: extract_test_conditions.ipynb
src/: cli.py  config.py  llm.py  logger.py  model_cost.py  runtest_conf.py  token_registry.py  utils.py
src/auth/: models.py  service.py  views.py
src/coverage/: models.py  service.py
src/eval/: apply.py  base.py  cli.py  create_dataset.py  datasets.py  db.py  eval_augment.py  eval_dataset.py  test_output.yaml  utils.py
src/local/: apply.py  augment_tests.py  db.py  models.py  tgt_coverage.py
src/queue/: core.py
src/repo/: models.py  service.py
src/runner/: cache.yaml  models.py  service.py
src/scripts/: create_dataset.py  neuter_repo.py
src/target_code/: models.py  service.py  views.py
src/tasks/: __init__.py  create_tgt_coverage.py  get_baseline_parallel.py
src/test_gen/: augment.py  service.py  views.py
tests/: conftest.py  pytest.ini  test_coverage.py  test_evaluator.py  test_llm.py  test_python_runner.py  test_runtest.py  test_sourcefile.py  test_testmodules.py  utils.py
(+49 files in other folders)
